# OrkaRV

./: .gitignore  .gitmodules  LICENSE  README.md  TerosProject.yml  pyproject.toml  vhdl_ls.toml
emulator/src/: cpu.rs  main.rs
firmware/: Cargo.toml  Justfile  cpu.surf.ron  runner.py
firmware/.cargo/: config.toml
firmware/bootloader/: Cargo.toml  build.rs  memory.x  upload.py
firmware/bootloader/src/: main.rs  memio.rs  upload.rs
firmware/common/: Cargo.toml
firmware/common/src/: debug.rs  lib.rs  uart.rs
firmware/coremark/: Justfile  core_portme.c  core_portme.h  ee_printf.c  linker.ld  start.S
firmware/nightly_pie/: Cargo.toml  build.rs  rust-toolchain.toml
firmware/nightly_pie/src/: main.rs
firmware/samples/: Cargo.toml
firmware/samples/examples/: csr.rs  delay.rs  gpio.rs  math.rs  uart.rs
firmware/src/: add_reg_imms.s  for_loop_adds.c  jumps.s  subword_mem.s
isa-tests/: .gitignore  README.md  config.ini
isa-tests/orka/: riscof_orka.py
isa-tests/sail_cSim/: riscof_sail_cSim.py
isa-tests/sail_cSim/env/: .gitignore
shared/: ruckus.tcl
shared/axi/: README.md
shared/axi/hdl/: AxiCrossbar.vhd  AxiLitePeakRdlBridge.vhd  AxiPkg.vhd  SlaveAxiIpIntegrator.vhd  axi4lite_intf_pkg.vhd
shared/csr/: Registers.md
shared/csr/hdl/: Csr.vhd  CsrPkg.vhd  CsrRegisters.vhd  CsrRegisters_pkg.vhd  csrif_pkg.vhd  registers.rdl
shared/gpio/hdl/: GpioRegisters_pkg.vhd  registers.rdl
shared/hdl/: AxiCrossbar.vhd  AxiCrossbarBroken.vhd  AxiLitePeakRdlBridge.vhd  AxiLiteTimeout.vhd  AxiToAxiLite.vhd  Cpu.vhd  Csr.vhd  CsrPkg.vhd  Gpio.vhd  InstCache.vhd  InstructionDecoder.vhd  Jtag.vhd  JtagPkg.vhd  Ram.vhd  Registers.vhd  RiscVPkg.vhd  Soc.vhd  axi4lite_intf_pkg.vhd  memory.yaml  reg_utils.vhd
shared/peripherals/: README.md  ruckus.tcl
shared/peripherals/clint/: README.md  Registers.md
shared/peripherals/clint/hdl/: Clint.vhd  ClintRegisters.vhd  ClintRegisters_pkg.vhd  registers.rdl
shared/peripherals/gpio/: Registers.md
shared/peripherals/gpio/hdl/: Gpio.vhd  GpioRegisters.vhd
shared/peripherals/uart/: Registers.md
shared/peripherals/uart/hdl/: Uart.vhd  UartRegisters.vhd  UartRegisters_pkg.vhd  registers.rdl
shared/scripts/: memory_gen.py  register_generation.sh
shared/tb/: CpuTb.vhd  SocTb.vhd
software/: .gitignore  Cargo.toml  Justfile  cpu.surf.ron  linker.ld  program.s  runner.py
software/.cargo/: config.toml
software/bootloader/: Cargo.toml  memory.x
software/bootloader/src/: main.rs
software/common/src/: debug.rs  lib.rs
software/emulator/: .gitignore  Cargo.toml  math
software/emulator/src/: cpu.rs  instructions.rs  main.rs
software/nightly_pie/: link.x
software/nightly_pie/.cargo/: config.toml
software/rust/: Cargo.toml  boot.S  build.rs  memory.x
software/rust/.cargo/: config.toml
software/rust/examples/: gpio.rs  math.rs  uart.rs
software/rust/src/: gpio.rs  lib.rs  reg.rs  uart.rs
software/sample_rust/: boot.S
software/sample_rust/src/: main.rs
software/samples/: Cargo.toml
software/samples/examples/: gpio.rs  uart.rs
software/src/: add_reg_imms.s  for_loop_adds.c  jumps.s  load_store_mem.s
targets/Arty/: Makefile  ruckus.tcl
targets/Arty/hdl/: Arty.vhd  InstructionDecoder.vhd
targets/Arty/vivado/: post_build.tcl
targets/Arty/xdc/: Arty.xdc
targets/CocotbSoc/hdl/: CocotbSoc.vhd
tests/: test_inst_dec.py  test_registers.py
