[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_field = "0.10.3"
riscv = { version = "0.15.0" }
riscv-rt = { version = "0.17.0", features = [
    "single-hart",
    "memory",
    "no-xie-xip",
    "no-xtvec",
    "no-mhartid",
] }
common = { path = "../common" }

[build-dependencies]
cc = "1.0"
