[package]
name = "bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_field = "0.10.3"
riscv = { version = "0.16.0" }
riscv-rt = { version = "0.17.0", features = [
    "single-hart",
    "memory",
    "no-xie-xip",
    "no-xtvec",
    "no-mhartid",
] }
common = { path = "../common" }
heapless = "0.9.2"
xmodem = { version = "0.4.0", default-features = false }

[build-dependencies]
cc = "1.0"
