[package]
name = "samples"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
riscv = { version = "0.16.0", features = ["critical-section-single-hart"] }

[dev-dependencies]
riscv-rt = { version = "0.17.0", features = [
    "single-hart",
    "memory",
    "no-xie-xip",
    "no-xtvec",
    "no-mhartid",
] }
heapless = "0.9.2"
