[package]
name = "samples"
version = "0.1.0"
edition = "2024"

[dependencies]
bbqueue = "0.6.0"
common = { path = "../common" }
critical-section = "1.2.0"
riscv = { version = "0.16.0", features = ["critical-section-single-hart"] }

[dev-dependencies]
riscv-rt = { version = "0.17.0", features = ["memory", "no-xie-xip"] }
heapless = "0.9.2"
